--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,9 @@
     box-sizing: border-box;
 }
 
-
+body{
+    font-family: 'Roboto', sans-serif;
+}
 
 .flex{
     display: flex;
@@ -15,6 +17,8 @@
 header{
     height: 650px;
     background-color: lightblue;
+    background-image: url(../img/jumbo.png);
+    background-size: cover;
 }
 
 /* header top */
@@ -27,26 +31,22 @@ header{
 
 .header-bottom{
     height: 85%;
-    background-color: blue;
 }
 
 header .bar{
-    width: 65%;
+    width: 75%;
     height: 60px;
-    background-color: goldenrod;
 }
 
 header .logo, header .login-button{
     width: 20%;
-    height: 100%;
-    border: 3px solid black;
+    height: 100%;;
     font-size: 30px;
 }
 
 header .links{
     width: 60%;
     height: 100%;
-    border: 3px solid black;
 }
 
 header .logo{
@@ -60,20 +60,35 @@ header .login-button{
     padding: 10px;
 }
 
+header .login-button span{
+    font-size: 14px;
+    background-color: white;
+    padding: 10px 18px;
+    border-radius: 18px;
+}
+
+.login-button a{
+    text-decoration: none;
+    margin-bottom: 10px;
+    color: black;
+}
+
 header .links{
     justify-content: center;
     align-items: center;
 }
 
 header .links li{
-    padding: 3px 7px;
+    padding: 3px 5px;
     list-style-type: none;
 } 
 
-header .links a{
+header .links li a{
     padding: 10px 20px;
-    font-size: 20px;
+    font-size: 17px;
     text-decoration: none;
+    color: white;
+    font-weight: 600px;
 }
 
 /* header bottom */
@@ -81,13 +96,51 @@ header .links a{
 header .header-bottom .box{
     width: 50%;
     height: 85%;
-    background-color: pink;
-    border: 3px solid black;
 }
 
 header .header-bottom{
     justify-content: center;
     align-items: center;
+}
+
+.header-bottom .box{
+    justify-content: center;
+    align-items: center;
+}
+
+.header-bottom .box > div{
+    text-align: center;
+}
+
+.header-bottom h1{
+    font-size: 60px;
+    padding-bottom: 40px;
+    font-weight: 700;
+    color: white;
+}
+
+.header-bottom p{
+    padding-bottom: 15px;
+    font-size: 20px;
+    color: white;
+}
+
+
+.header-bottom span{
+    padding: 10px 15px;
+    border-radius: 20px;
+    display: inline-block;
+    margin: 0 7px 50px;
+}
+
+.header-bottom .download{
+    color: black;
+    background-color: white;
+}
+
+.header-bottom .open-browser{
+    background-color: black;
+    color: white;
 }
 
 /* fine header */
@@ -98,6 +151,7 @@ header .header-bottom{
 /* inizio main */
 
 /* sezioni */
+
 main .section{
     height: 650px;
     width: 100%;
