--- a/bonus/css/style.css
+++ b/bonus/css/style.css
@@ -67,9 +67,14 @@ header .login-button span{
     border-radius: 18px;
 }
 
+header .login-button span:hover{
+    color: #5865f2;
+    box-shadow: 2px 2px 15px #888888;
+}
+
 header .login-button a{
     text-decoration: none;
-    margin-bottom: 10px;
+    margin-bottom: 3px;
     color: black;
 }
 
@@ -91,6 +96,10 @@ header .links li a{
     font-weight: 600px;
 }
 
+
+header .links li a:hover{
+    text-decoration: underline;
+}
 
 /* header bottom */
 
@@ -131,6 +140,16 @@ header .links li a{
     border-radius: 20px;
     display: inline-block;
     margin: 0 7px 50px;
+}
+
+.header-bottom .download:hover{
+    color: #5865f2;
+    box-shadow: 2px 2px 15px #888888;
+}
+
+.header-bottom .open-browser:hover{
+    background-color: #23272a;
+    box-shadow: 2px 2px 15px #888888;
 }
 
 .header-bottom .download{
@@ -216,7 +235,6 @@ main .section.white img{
 main .section-big{
     height: 1200px;
     width: 100%;
-    background-color: #f5f5f5;
     justify-content: center;
     align-items: center;
 }
@@ -249,6 +267,11 @@ main .section-big span{
     background-color:  #5865f2;
     border-radius: 20px;
     padding: 12px 16px;
+}
+
+main .section-big span:hover{
+    background-color: #6c76e4;
+    box-shadow: 2px 2px 15px #888888;
 }
 
 main .section-big a{
@@ -336,6 +359,11 @@ footer{
     color: white;
     padding: 7px 0;
 }
+
+.footer-top .mid-column a:hover{
+    text-decoration: underline;
+}
+
 /* footer bottom */
 .footer-bottom .bar{
     width: 60%;
@@ -355,6 +383,11 @@ footer{
     background-color:  #5865f2;
     border-radius: 20px;
     padding: 12px 16px;
+}
+
+.footer-bottom .register span:hover{
+    background-color: #6c76e4;
+    box-shadow: 2px 2px 15px #888888;
 }
 
 footer .bar > div{
